Still incrementing xtend-maven-plugin heap size for bflow