@@ -155,7 +155,10 @@
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<configuration><argLine>-Xmx4096m</argLine></configuration>
+				<configuration>
+					<argLine>-Xmx8192m</argLine>
+				 	<argLine>-XX:MaxPermSize=8192m</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
